Fix highlight overflow-x

--- a/src/css/config/code.css
+++ b/src/css/config/code.css
@@ -19,6 +19,7 @@ code,
   padding: 1em;
   line-height: 1.3;
   border-radius: 6px;
+  overflow-x: auto;
 
   code {
     /* reset styles when wrapped */
